# tsukiba-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  index.php  pyproject.toml
alembic/: env.py
alembic/versions/: 20260517_0001_initial.py
app/: config.py  database.py  deps.py  main.py  models.py  presentation.py  security.py  templating.py
app/endpoints/actions/: manage.py  moderation.py  posts.py
app/endpoints/api/: board.py
app/endpoints/pages/: admin.py  board.py
app/services/: board.py  captcha.py  files.py  text.py
app/templates/: base.html
app/templates/pages/: api.html  archive.html  archived_thread.html  catalog.html  error.html  index.html  info.html  manage.html  modlog.html  thread.html
app/templates/partials/: file.html  mod_form.html  pagination.html  post.html  post_form.html  thread_container.html
assets/: script.js  style.css
