[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsukiba"
version = "0.1.0"
description = "Anonymous imageboard rewritten with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "fastapi>=0.111",
    "jinja2>=3.1",
    "pillow>=10.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["app*"]
